--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.10.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "1.13.5",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "4.8.3",
+    "three": "^0.148.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/three": "^0.148.0"
   }
 }
